--- a/themes/home/huong-dan-cham-soc-va-che-do-an-uong-sau-phau-thuat-tham-my.html
+++ b/themes/home/huong-dan-cham-soc-va-che-do-an-uong-sau-phau-thuat-tham-my.html
@@ -62,39 +62,39 @@
                                 <a href="gioi-thieu.html" class="header_20_0_0__box__item arr">Giới thiệu</a>
                             </li>
                             <li class="menuSub">
-                                <a href="#" class="header_20_0_0__box__item arr">Dịch vụ</a>
+                                <a href="huong-dan-cham-soc-va-che-do-an-uong-sau-phau-thuat-tham-my.html" class="header_20_0_0__box__item arr">Hướng dẫn chăm sóc</a>
                             </li>
                             <li class="menuSub">
-                                <a href="bang-gia.html" class="header_20_0_0__box__item arr">Bảng giá</a>
+                                <a href="ReadFile/bang-gia.html" class="header_20_0_0__box__item arr" target="_blank">Bảng giá dịch vụ</a>
                             </li>
-                            <li class="menuSub">
-                                <a href="lien-he.html" class="header_20_0_0__box__item arr">Liên hệ</a>
+                            <li class=" menuSub ">
+                                <a href="lien-he.html " class="header_20_0_0__box__item arr ">Liên hệ</a>
                             </li>
-                            <li class="menuSub">
-                                <a href="chat-luong/index.html" class="header_20_0_0__box__item arr" target="_blank">Chất lượng</a>
+                            <li class="menuSub ">
+                                <a href="ReadFile/chat-luong.html " class="header_20_0_0__box__item arr " target="_blank ">Chất lượng</a>
                             </li>
                         </ul>
 
 
                     </div>
-                    <div class="header_20_0_0__task">
-                        <a href="" class="header_20_0_0__boxSearch modal-btn" data-modal="search">
-                            <i class="icon-search-2">
-                                <img width="20" height="20" src="images/search.svg"
-                                    alt="">
+                    <div class="header_20_0_0__task ">
+                        <a href=" " class="header_20_0_0__boxSearch modal-btn " data-modal="search ">
+                            <i class="icon-search-2 ">
+                                <img width="20 " height="20 " src="images/search.svg "
+                                    alt=" ">
                             </i>
                         </a>
                     </div>
-                    <div class="header_20_0_0__box-bg" id="bg-menu">
+                    <div class="header_20_0_0__box-bg " id="bg-menu ">
                     </div>
                 </div>
 
             </div>
         </div>
-        <div class="header_20_0_0__box-all" id="boxall-menu">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-3">
+        <div class="header_20_0_0__box-all " id="boxall-menu ">
+            <div class="container ">
+                <div class="row ">
+                    <div class="col-md-3 ">
                         <h4>Mắt</h4>
                         <ul>
                             <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
@@ -106,7 +106,7 @@
                             <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 ">
                         <h4>Mũi</h4>
                         <ul>
                             <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
@@ -118,7 +118,7 @@
                             <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 ">
                         <h4>Khuôn mặt</h4>
                         <ul>
                             <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
@@ -130,7 +130,7 @@
                             <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 ">
                         <h4>Body</h4>
                         <ul>
                             <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
@@ -142,7 +142,7 @@
                             <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 ">
                         <h4>Trẻ hóa</h4>
                         <ul>
                             <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
@@ -154,7 +154,7 @@
                             <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 ">
                         <h4>Da liễu</h4>
                         <ul>
                             <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
@@ -166,7 +166,7 @@
                             <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 ">
                         <h4>Spa</h4>
                         <ul>
                             <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
@@ -178,7 +178,7 @@
                             <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 ">
                         <h4>Nha khoa</h4>
                         <ul>
                             <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
@@ -190,7 +190,7 @@
                             <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 ">
                         <h4>Giới thiệu</h4>
                         <ul>
                             <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
@@ -206,24 +206,24 @@
             </div>
         </div>
     </header>
-    <script src="Header/header_20_0_0/js/header_20_0_0.js"></script>
+    <script src="Header/header_20_0_0/js/header_20_0_0.js "></script>
 
-    <link rel="stylesheet" type="text/css" href="Post/post_4_3_0/css/post_4_3_0.css" />
-    <section class="post_4_3_0">
-        <div class="container">
-            <h3 class="post_4_3_0__header">Hướng dẫn chăm sóc và chế độ ăn uống sau phẫu thuật thẩm mỹ</h3>
+    <link rel="stylesheet " type="text/css " href="Post/post_4_3_0/css/post_4_3_0.css " />
+    <section class="post_4_3_0 ">
+        <div class="container ">
+            <h3 class="post_4_3_0__header ">Hướng dẫn chăm sóc và chế độ ăn uống sau phẫu thuật thẩm mỹ</h3>
         </div>
-        <div class="post_4_3_0__header-desc">
-            <div class="container">
+        <div class="post_4_3_0__header-desc ">
+            <div class="container ">
                 <p>Sau khi phẫu thuật thẩm mỹ, quá trình chăm sóc hậu phẫu và chế độ dinh dưỡng “chuẩn” sẽ giúp khách hàng nhanh chóng hồi phục và duy trì kết quả thẩm mỹ ổn định, lâu dài. Đồng thời, tránh được tối đa các biến chứng sau thẩm mỹ do chế độ
                     sinh hoạt sai cách. </p>
             </div>
         </div>
-        <div class="post_4_3_0__main">
-            <div class="container">
-                <div class="post_4_3_0__part1">
-                    <div class="post_4_3_0__part1-left">
-                        <h3 class="post_4_3_0__main-title1">I. Hướng dẫn chăm sóc sau phẫu thuật thẩm mỹ</h3>
+        <div class="post_4_3_0__main ">
+            <div class="container ">
+                <div class="post_4_3_0__part1 ">
+                    <div class="post_4_3_0__part1-left ">
+                        <h3 class="post_4_3_0__main-title1 ">I. Hướng dẫn chăm sóc sau phẫu thuật thẩm mỹ</h3>
                         <p>Tùy từng dịch vụ thẩm mỹ mà các bác sĩ sẽ chỉ định chế độ chăm sóc hậu phẫu riêng. Đối với dịch vụ tiểu phẫu, khách hàng sẽ được nghỉ ngơi vài giờ, theo dõi tại bệnh viện sau đó được xuất viện trong ngày. </p>
                         <p>Đối với dịch vụ đại phẫu khách hàng cần lưu trú tại bệnh viện từ 2-3 ngày.</p>
                         <p>Mỗi dịch vụ sẽ có lịch tái khám để kiểm tra vết thương, cắt chỉ, tháo băng nẹp riêng.</p>
@@ -231,7 +231,7 @@
                     <img src='images/part-1.jpg' />
                 </div>
                 <div class='post_4_3_0__part2'>
-                    <h4 class="post_4_3_0__main-title2"> 1. Đối với thẩm mỹ tiểu phẫu như cắt mí, nâng mũi, độn cằm...</h4>
+                    <h4 class="post_4_3_0__main-title2 "> 1. Đối với thẩm mỹ tiểu phẫu như cắt mí, nâng mũi, độn cằm...</h4>
                     <div>
                         <p>- Cần thực hiện đúng theo hướng dẫn của bác sĩ</p>
                         <p>- Tự vệ sinh vết thương tại gia bằng cách sát trùng nhẹ vết mổ bằng dung dịch nước muối sinh lý, hoặc betadine pha loãng với nước muối sinh lý hoặc đến bệnh viện các y tá thực hiện.</p>
@@ -243,7 +243,7 @@
                     </div>
                 </div>
                 <div class='post_4_3_0__part2'>
-                    <h4 class="post_4_3_0__main-title2">2. Đối với các thẩm mỹ đại phẫu như giảm mỡ, nâng ngực, hàm mặt…</h4>
+                    <h4 class="post_4_3_0__main-title2 ">2. Đối với các thẩm mỹ đại phẫu như giảm mỡ, nâng ngực, hàm mặt…</h4>
                     <div>
                         <p>- Thay băng trong vòng 24h sau phẫu thuật và nghỉ ngơi theo dõi tại viện 1-3 ngày </p>
                         <p>- Mang đai định hình ngay sau phẫu thuật để giúp hạn chế sưng nề, định hình phom</p>
@@ -254,17 +254,17 @@
                     </div>
                 </div>
                 <div class='post_4_3_0__part3'>
-                    <h3 class="post_4_3_0__main-title1">II. Chế độ dinh dưỡng sau phẫu thuật thẩm mỹ</h3>
+                    <h3 class="post_4_3_0__main-title1 ">II. Chế độ dinh dưỡng sau phẫu thuật thẩm mỹ</h3>
                     <img src='images/part-2.jpg' />
 
-                    <h4 class="post_4_3_0__main-title2">1. Chế độ kiêng sau phẫu thuật</h4>
+                    <h4 class="post_4_3_0__main-title2 ">1. Chế độ kiêng sau phẫu thuật</h4>
                     <div>
                         <p>- Kiêng ăn thực phẩm gây sẹo lồi như rau muống; kiêng ăn các loại thực phẩm dễ gây ngứa, mưng mủ như thịt gà, hải sản, đồ nếp, đồ tanh…</p>
                         <p>- Kiêng các thực phẩm ảnh hưởng tới sắc tố da như trứng, thịt bò; kiêng ăn đồ cay nóng; không sử dụng chất kích thích (bia, rượu, thuốc lá, cà phê…) vì những thực phẩm này khiến quá trình hồi phục vết thương kéo dài và tăng nguy
                             cơ nhiễm trùng</p>
                         <p>- Không sử dụng chất kích thích, đồ uống có cồn trong vòng tối thiểu 1 tháng</p>
                     </div>
-                    <h4 class="post_4_3_0__main-title2">2. Chế độ ăn uống nên duy trì</h4>
+                    <h4 class="post_4_3_0__main-title2 ">2. Chế độ ăn uống nên duy trì</h4>
                     <div>
                         <p>- Đối với thẩm mỹ khu vực hàm mặt trong vòng 7 - 10 ngày, tránh ăn các thức ăn cứng. Nên ăn đồ mềm như cháo (lưu ý ăn cháo gạo tẻ), súp, thực phẩm xay nhuyễn</p>
                         <p>- Sử dụng các thực phẩm chức năng có chứa collagen, vitamin C, đồng, kẽm nhằm cung cấp đầy đủ dưỡng chất cho cơ thể. Như vậy, vết mổ sẽ đạt tính thẩm mỹ cao hơn.</p>
@@ -282,37 +282,37 @@
             </div>
         </div>
     </section>
-    <link rel="stylesheet" type="text/css" href="Footer/footer_5_0_0/css/footer_5_0_0.css" />
-    <section class="footer_5_0_0">
-        <div class="footer_5_0_0__container container">
-            <div class="footer_5_0_0Box">
-                <div class="foodItem footer_5_0_0Item-brand">
-                    <div class="foodItem-brand__logo">
-                        <a href="/"><img src="images/logo.png" alt="Bệnh viện thẩm mỹ Kang Nam Logo"></a>
+    <link rel="stylesheet " type="text/css " href="Footer/footer_5_0_0/css/footer_5_0_0.css " />
+    <section class="footer_5_0_0 ">
+        <div class="footer_5_0_0__container container ">
+            <div class="footer_5_0_0Box ">
+                <div class="foodItem footer_5_0_0Item-brand ">
+                    <div class="foodItem-brand__logo ">
+                        <a href="/ "><img src="images/logo.png " alt="Bệnh viện thẩm mỹ Kang Nam Logo "></a>
                     </div>
                 </div>
 
-                <div class="foodItem footer_5_0_0Item-city">
-                    <div class="footer_5_0_0Item-city__name">tp. hồ chí minh</div>
-                    <div class="footer_5_0_0Item-city__contact">
-                        <a class="footer_5_0_0Item-city__contact-add" rel="nofollow" target="_blank" href="https://www.google.com/maps/place/B%E1%BB%87nh+Vi%E1%BB%87n+Th%E1%BA%A9m+M%E1%BB%B9+Kangnam+H%C3%A0n+Qu%E1%BB%91c/@10.7817488,106.6797661,17z/data=!3m1!4b1!4m5!3m4!1s0x31752edf6f710189:0xb553f42d991d07dd!8m2!3d10.7817488!4d106.6819548?hl=vi"><span><img
-                                    src="images/icon-map.png"></span>666 Cách mạng tháng 8, P5, Q. Tân Bình, Tp.HCM</a>
-                        <div class="footer_5_0_0Item__contact-hot">
-                            <span><img src="images/icon-call.png"></span>
-                            <a class="footer_5_0_0Item-city__contact-hotline" rel="nofollow" target="_blank" href="tel:024.73.00.64.66">024.73.00.64.66</a>
-                            <a class="footer_5_0_0Item-city__contact-hotline" rel="nofollow" target="_blank" href="tel:0948.44.99.88"> - 0948.44.99.88</a>
+                <div class="foodItem footer_5_0_0Item-city ">
+                    <div class="footer_5_0_0Item-city__name ">tp. hồ chí minh</div>
+                    <div class="footer_5_0_0Item-city__contact ">
+                        <a class="footer_5_0_0Item-city__contact-add " rel="nofollow " target="_blank " href="https://www.google.com/maps/place/B%E1%BB%87nh+Vi%E1%BB%87n+Th%E1%BA%A9m+M%E1%BB%B9+Kangnam+H%C3%A0n+Qu%E1%BB%91c/@10.7817488,106.6797661,17z/data=!3m1!4b1!4m5!3m4!1s0x31752edf6f710189:0xb553f42d991d07dd!8m2!3d10.7817488!4d106.6819548?hl=vi "><span><img
+                                    src="images/icon-map.png "></span>666 Cách mạng tháng 8, P5, Q. Tân Bình, Tp.HCM</a>
+                        <div class="footer_5_0_0Item__contact-hot ">
+                            <span><img src="images/icon-call.png "></span>
+                            <a class="footer_5_0_0Item-city__contact-hotline " rel="nofollow " target="_blank " href="tel:024.73.00.64.66 ">024.73.00.64.66</a>
+                            <a class="footer_5_0_0Item-city__contact-hotline " rel="nofollow " target="_blank " href="tel:0948.44.99.88 "> - 0948.44.99.88</a>
                         </div>
                     </div>
                 </div>
-                <div class="footer_5_0_0Item-hot">
+                <div class="footer_5_0_0Item-hot ">
                     Hotline: 19006466
                 </div>
             </div>
             <div class="footer_5_0_0Box footer_5_0_0Box2 ">
-                <div class="foodItem footer_5_0_0Item-brand">
+                <div class="foodItem footer_5_0_0Item-brand ">
 
                 </div>
-                <div class="foodItem footer_5_0_0Item-city2">
+                <div class="foodItem footer_5_0_0Item-city2 ">
                     <p>
                         Bệnh viện thẩm mỹ Kangnam Sài Gòn<br> Giấy phép hoạt động kcb số 287/byt-gphđ do bộ y tế <br> cấp ngày 03/12/2020
                     </p>
@@ -320,11 +320,11 @@
                 </div>
 
             </div>
-            <div class="footer_5_0_0Item-gp">
+            <div class="footer_5_0_0Item-gp ">
 
 
 
-                <p><img src="images/dcma.png"></p>
+                <p><img src="images/dcma.png "></p>
             </div>
         </div>
     </section>
