--- a/themes/home/lien-he.html
+++ b/themes/home/lien-he.html
@@ -62,16 +62,16 @@
                                 <a href="gioi-thieu.html" class="header_20_0_0__box__item arr">Giới thiệu</a>
                             </li>
                             <li class="menuSub">
-                                <a href="#" class="header_20_0_0__box__item arr">Dịch vụ</a>
+                                <a href="huong-dan-cham-soc-va-che-do-an-uong-sau-phau-thuat-tham-my.html" class="header_20_0_0__box__item arr">Hướng dẫn chăm sóc</a>
                             </li>
                             <li class="menuSub">
-                                <a href="bang-gia.html" class="header_20_0_0__box__item arr">Bảng giá</a>
+                                <a href="ReadFile/bang-gia.html" class="header_20_0_0__box__item arr" target="_blank">Bảng giá dịch vụ</a>
                             </li>
-                            <li class="menuSub">
-                                <a href="lien-he.html" class="header_20_0_0__box__item arr">Liên hệ</a>
+                            <li class=" menuSub ">
+                                <a href="lien-he.html " class="header_20_0_0__box__item arr ">Liên hệ</a>
                             </li>
-                            <li class="menuSub">
-                                <a href="chat-luong/index.html" class="header_20_0_0__box__item arr" target="_blank">Chất lượng</a>
+                            <li class="menuSub ">
+                                <a href="ReadFile/chat-luong.html " class="header_20_0_0__box__item arr " target="_blank ">Chất lượng</a>
                             </li>
                         </ul>
 
