--- a/themes/home/gioi-thieu.html
+++ b/themes/home/gioi-thieu.html
@@ -56,7 +56,7 @@
                         <div class="iconMidd header_20_0_0__boxNav" id="icon-menu">☰</div>
                     </div>
                     <div class="header_20_0_0__box__section header_20_0_0__boxMain" id="menu-show">
-                        <a href="#page1" class="header_20_0_0__box__item-logosb"><img src="images/logosb.png" alt=""></a>
+                        <a href="#page1" class="header_20_0_0__box__item-logosb"><img src="images/logo-blue.png" alt=""></a>
                         <ul class="menu">
                             <li class="menuSub">
                                 <a href="gioi-thieu.html" class="header_20_0_0__box__item arr">Giới thiệu</a>
@@ -78,12 +78,9 @@
 
                     </div>
                     <div class="header_20_0_0__task">
-                        <a href="" class="header_20_0_0__boxSearch modal-btn" data-modal="search">
-                            <i class="icon-search-2">
-                                <img width="20" height="20" src="images/search.svg"
-                                    alt="">
-                            </i>
-                        </a>
+                        <span href="#" class="header_20_0_0__boxSearch ">
+                            19006466 
+                        </span>
                     </div>
                     <div class="header_20_0_0__box-bg" id="bg-menu">
                     </div>
@@ -232,9 +229,20 @@
                 <img src='images/kangnam-SG.jpg' />
             </div>
         </section>
+        <section class='post_4_0_0_slogans'>
+            <div class='container'>
+                <span class="post_4_4_0-title">II. Biểu trưng và khẩu hiệu</span>
+                <img src='images/kangnam-slogan.jpg' />
+                <div>
+                    <p>Tổng thể logo bao gồm chữ "Bệnh viện thẩm mỹ Kangnam Sài Gòn" kết hợp với biểu tượng bông hoa lấy cảm hứng từ hoa Mugung (quốc hoa của Hàn Quốc). </p>
+                    <p>Logo thương hiệu Bệnh viện thẩm mỹ Kangnam Sài Gòn thể hiện được triết lý: "ĐẸP - AN TOÀN - CHUẨN HÀN" .</p>
+                    <p>Với khẩu hiệu “Vẻ đẹp vượt qua mọi ước mơ”, đội ngũ y bác sĩ BVTM Kangnam Sài Gòn quyết tâm mang lại cho khách hàng kết quả thẩm mỹ vượt mong đợi</p>
+                </div>
+            </div>
+        </section>
         <section class="post_4_0_0_intro">
             <div class="container">
-                <span class="post_4_4_0-title">II. Sơ đồ tổ chức</span>
+                <span class="post_4_4_0-title">III. Sơ đồ tổ chức</span>
                 <img class="post_4_0_0_intro-img " src='images/diagram.jpg' />
                 <a class="post_4_0_0_intro-btn modal-btn" data-modal="modal-pic">Click để phóng to</a>
                 <div class="modal" id="modal-pic">
@@ -251,7 +259,7 @@
         </section>
         <section class="post_4_0_0_hr">
             <div class="container">
-                <span class="post_4_4_0-title">III. Bộ máy nhân sự</span>
+                <span class="post_4_4_0-title">IV. Bộ máy nhân sự</span>
                 <div class="post_4_0_0_hr__content">
 
                     <div class="post_4_0_0_hr__main">
