--- a/themes/home/index.html
+++ b/themes/home/index.html
@@ -56,7 +56,7 @@
                         <div class="iconMidd header_20_0_0__boxNav" id="icon-menu">☰</div>
                     </div>
                     <div class="header_20_0_0__box__section header_20_0_0__boxMain" id="menu-show">
-                        <a href="#page1" class="header_20_0_0__box__item-logosb"><img src="images/logosb.png" alt=""></a>
+                        <a href="#page1" class="header_20_0_0__box__item-logosb"><img src="images/logo.png" alt=""></a>
                         <ul class="menu">
                             <li class="menuSub">
                                 <a href="gioi-thieu.html" class="header_20_0_0__box__item arr">Giới thiệu</a>
@@ -78,12 +78,9 @@
 
                     </div>
                     <div class="header_20_0_0__task">
-                        <a href="" class="header_20_0_0__boxSearch modal-btn" data-modal="search">
-                            <i class="icon-search-2">
-                                <img width="20" height="20" src="images/search.svg"
-                                    alt="">
-                            </i>
-                        </a>
+                        <span href="#" class="header_20_0_0__boxSearch ">
+                            19006466 
+                        </span>
                     </div>
                     <div class="header_20_0_0__box-bg" id="bg-menu">
                     </div>
