--- a/themes/home/lien-he.html
+++ b/themes/home/lien-he.html
@@ -262,7 +262,7 @@
                         </span>
                     </div>
                     <div class="post_4_2_0__box-right">
-                        <span class="post_4_2_0__box-desc">Tất cả các ngày trong tuần <br><span style="color:#ff6000">7:00 - 18:00</span> hàng ngày</span>
+                        <span class="post_4_2_0__box-desc">Tất cả các ngày trong tuần:<span style="color:#ff6000"> 24/7</span></span>
                     </div>
                 </div>
             </div>
