--- a/themes/home/huong-dan-cham-soc-va-che-do-an-uong-sau-phau-thuat-tham-my.html
+++ b/themes/home/huong-dan-cham-soc-va-che-do-an-uong-sau-phau-thuat-tham-my.html
@@ -326,6 +326,168 @@
         </div>
     </section>
 
+    <link rel="stylesheet" type="text/css" href="Tool/tool_info_1_2_1/css/tool_info_1_2_1.css" />
+    <section class="tool_info_1_2_1">
+        <div class="container">
+            <div class="tool_info_1_2_1__box">
+                <div class="tool_info_1_2_1__item">
+                    <a class="bvkn_dkcall"> Gọi điện
+                            <div class="icon">
+                                <img width="21" height="21" src="images/call.png" alt="Gọi điện">
+                            </div>
+                        </a>
+                </div>
+                <div class="tool_info_1_2_1__item">
+                    <a href="https://zalo.me/3078465991051061571" target="_blank"> Zalo
+                            <div class=" icon ">
+                                <img width="26 " height="25 " src="images/zalo.png " alt="Zalo ">
+                            </div>
+                        </a>
+                </div>
+                <div class="tool_info_1_2_1__item ">
+                    <a class="btnkn1km "> Báo giá
+                            <div class="icon ">
+                                <img width="29 " height="21 " src="images/dola.png " alt="Ưu đãi ">
+                            </div>
+                    </div></a>
+                    <div class="tool_info_1_2_1__item ">
+                        <a class="popup_map_1_0_0__click "> Vị trí
+                            <div class="icon ">
+                                <img width="19 " height="23 " src="images/vt.png " alt="Vị trí ">
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <link rel="stylesheet " type="text/css " href="Tool/popup_map_1_0_0/css/popup_map_1_0_0.css " />
+    <script src="Tool/popup_map_1_0_0/js/popup_map_1_0_0.js "></script>
+    <div class="popup_map_1_0_0" style="">
+        <div class="container">
+            <div class="popup_map_1_0_0__bg" id="popup_map_1_0_0_overlay" style="display:none"></div>
+            <div class="popup_map_1_0_0__form" id="popup_map_1_0_0_overlayClickform" style="display:none">
+                <div class="popup_map_1_0_0__box">
+                    <article>
+                        <div class="popup_map_1_0_0__content">
+                            <div class="popup_map_1_0_0__item">
+                                <div class="popup_map_1_0_0__tt">
+                                    <img src="images/tt_hcm.png" alt="">
+                                </div>
+                                <div class="popup_map_1_0_0__ct">
+                                    <div class="popup_map_1_0_0__pic">
+                                        <img src="images/KN-hcm.jpg" alt="">
+                                    </div>
+                                    <a href="https://www.google.com/maps/place/B%E1%BB%87nh+Vi%E1%BB%87n+Th%E1%BA%A9m+M%E1%BB%B9+Kangnam+H%C3%A0n+Qu%E1%BB%91c/@10.7817488,106.6797661,17z/data=!3m1!4b1!4m5!3m4!1s0x31752edf6f710189:0xb553f42d991d07dd!8m2!3d10.7817488!4d106.6819548?hl=vi"
+                                        target="_blank">
+                                        <img src="images/hcm.png" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <a id="popup_map_1_0_0__close"></a>
+                    </article>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <link rel="stylesheet " type="text/css " href="Tool/popup_call_1_0_0/css/popup_call_1_0_0.css " />
+    <script src="Tool/popup_call_1_0_0/js/popup_call_1_0_0.js "></script>
+    <div class="popup_call_1_0_0">
+        <div class="popup_call_1_0_0__bo">
+            <div class="popup_call_1_0_0_overlay" id="popup_call_1_0_0_overlay" style="display:none"></div>
+            <div id="popup_call_1_0_0_overlayClickform" class="overlay_form" style="display:none">
+                <div class="popup_call_1_0_0_box">
+                    <article>
+                        <div class="popup_call_1_0_0_header">
+                            <a id="popup_call_1_0_0_closePopup"></a>
+                            <img src='images/logo-blue.png' />
+                            <div class="popup_call_1_0_0_headerpc">
+                                <div class="popup_call_1_0_0_header-note">Nhập số điện thoại để được BVTM Kangnam gọi lại ngay !</div>
+                            </div>
+                            <div class="popup_call_1_0_0_headermb">
+                                <a href="tel:19006466" class="popup_call_1_0_0_headermb-call"><i class="popup_call_1_0_0_headermb-call-icon"></i> gọi ngay cho chúng tôi</a>
+                                <div class="popup_call_1_0_0_header-note">- hoặc để lại số điện thoại của bạn - <br> để nhận cuộc gọi từ <br> BVTM Kangnam</div>
+                            </div>
+                        </div>
+                        <div class="popup_call_1_0_0_content">
+                            <div>
+                                <div style="display:none">
+                                    <input type="text" placeholder="Họ và tên (*)" value="Yêu Cầu Gọi Lại" id="iname" name="iname">
+                                    <textarea type="text" placeholder="Nhu cầu tư vấn" id="itext" name="itext"></textarea>
+                                    <input id="iemail" name="iemail" value="no@email.benhvienthammykangnam.vn" type="hidden" placeholder="Email">
+                                    <input type="hidden" id="gclid_field" name="gclid_field" value="">
+                                    <input type="hidden" id="name_campaign" name="name_campaign" value="[Kangnam] Yêu Cầu Gọi Lại">
+                                    <input type="hidden" id="code_campaign" name="code_campaign" value="533588630">
+                                </div>
+                                <input id="imob" name="imob" type="textbox" placeholder="Nhập số điện thoại của bạn*:">
+                            </div>
+                            <div>
+                                <input onclick="ants_sent_phone(this);" id="pop_sent" type="button" value="yêu cầu gọi lại">
+                            </div>
+                        </div>
+                        <div class="popup_call_1_0_0_headerpc">
+                            <div class="popup_call_1_0_0_header-note">* Hoặc gọi ngay với chúng tôi hotline: <br> 1900.6466</div>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <link rel="stylesheet " type="text/css " href="Tool/popup_regist_1_0_8/css/popup_regist_1_0_8.css " />
+    <script src="Tool/popup_regist_1_0_8/js/popup_regist_1_0_8.js "></script>
+    <div class="popup_regist_1_0_8">
+        <div class="popup_regist_1_0_8_block">
+            <div class="popup_regist_1_0_8_overlay" id="popup_regist_1_0_8_overlay" style="display:none"></div>
+            <div id="popup_regist_1_0_8_overlayClickForm" class="popup_regist_1_0_8_overlayForm" style="display:none">
+                <div class="popup_regist_1_0_8_boxTv">
+                    <div class="regist_ft_1_0_8__form" id="regist_ft_1_0_8__form">
+                        <h2>
+                            Nhận báo giá thẩm mỹ
+                            <b id="close-form">╳</b>
+                        </h2>
+                        <span>* Để lại thắc mắc về chi phí, Kangnam liên hệ giải đáp cho bạn</span>
+                        <hr>
+                        <article>
+                            <div>
+                                <label>* Tên:</label>
+                                <input id="iname" name="iname" type="textbox" required>
+                            </div>
+                            <div>
+                                <label>* Số điện thoại:</label>
+                                <input id="imob" name="imob" type="textbox" required>
+                            </div>
+                            <div>
+                                <label>* Dịch vụ quan tâm:</label>
+                                <select name="icity" id="icity">
+                                    <option value="- Chọn -">--- Chọn ---</option>
+                                    <option value="Cắt mí">Cắt mí</option>
+                                    <option value="Nâng mũi">Nâng mũi</option>
+                                    <option value="Giảm mỡ">Giảm mỡ</option>
+                                    <option value="Nâng ngực">Nâng ngực</option>
+                                    <option value="Hàm mặt">Hàm mặt</option>
+                                </select>
+                            </div>
+                            <input type="hidden" style="display:none" id="iemail" name="iemail" type="textbox" placeholder="Email:">
+                            <!-- <textarea id="itext" type="hidden" name="itext" value="" placeholder="Dịch vụ quan tâm"></textarea> -->
+                            <input type="hidden" id="gclid_field" name="gclid_field" value="">
+                            <input type="hidden" id="code_campaign" name="code_campaign" value="583971142">
+                            <input type="hidden" id="name_campaign" name="name_campaign" value="[Kangnam] Sale Kangnam">
+                        </article>
+                        <div class="reg">
+                            <input id="popup_regist_1_0_2_clickSent" onclick="ants_send_contact(this);" type="button" value="HOÀN THÀNH">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="media/js/jquery.js"></script>
+    <script type="text/javascript" src="https://benhvienthammykangnam.vn/quangcao247/contact/template/js/js.js?t=112346"></script>
+
     <script>
         function imgTheme(path, tag) {
             let x = document.querySelectorAll(tag);
@@ -347,9 +509,10 @@
         imgTheme('Header/header_20_0_0/', '.header_20_0_0 img')
         imgTheme('Post/post_4_3_0/', '.post_4_3_0 img')
         sourceTheme('Post/post_4_3_0/', '.post_4_3_0 source')
-
-
         imgTheme('Footer/footer_5_0_0/', '.footer_5_0_0 img')
+        imgTheme('Tool/tool_info_1_2_1/', '.tool_info_1_2_1 img')
+        imgTheme('Tool/popup_map_1_0_0/', '.popup_map_1_0_0 img')
+        imgTheme('Tool/popup_call_1_0_0/', '.popup_call_1_0_0 img')
     </script>
 </body>
 
