--- a/themes/home/gioi-thieu.html
+++ b/themes/home/gioi-thieu.html
@@ -372,7 +372,7 @@
         </div>
     </section>
 
-    <link rel="stylesheet" type="text/css" href="Tool/tool_info_1_2_1/css/tool_info_1_2_1.css" />
+    <link rel="stylesheet" type="text/css" href="Popup/tool_info_1_2_1/css/tool_info_1_2_1.css" />
     <section class="tool_info_1_2_1">
         <div class="container">
             <div class="tool_info_1_2_1__box">
@@ -408,8 +408,8 @@
         </div>
     </section>
 
-    <link rel="stylesheet " type="text/css " href="Tool/popup_map_1_0_0/css/popup_map_1_0_0.css " />
-    <script src="Tool/popup_map_1_0_0/js/popup_map_1_0_0.js "></script>
+    <link rel="stylesheet " type="text/css " href="Popup/popup_map_1_0_0/css/popup_map_1_0_0.css " />
+    <script src="Popup/popup_map_1_0_0/js/popup_map_1_0_0.js "></script>
     <div class="popup_map_1_0_0" style="">
         <div class="container">
             <div class="popup_map_1_0_0__bg" id="popup_map_1_0_0_overlay" style="display:none"></div>
@@ -439,26 +439,26 @@
         </div>
     </div>
 
-    <link rel="stylesheet " type="text/css " href="Tool/popup_call_1_0_0/css/popup_call_1_0_0.css " />
-    <script src="Tool/popup_call_1_0_0/js/popup_call_1_0_0.js "></script>
-    <div class="popup_call_1_0_0">
-        <div class="popup_call_1_0_0__bo">
-            <div class="popup_call_1_0_0_overlay" id="popup_call_1_0_0_overlay" style="display:none"></div>
-            <div id="popup_call_1_0_0_overlayClickform" class="overlay_form" style="display:none">
-                <div class="popup_call_1_0_0_box">
+    <link rel="stylesheet " type="text/css " href="Popup/popup_call_1_1_0/css/popup_call_1_1_0.css " />
+    <script src="Popup/popup_call_1_1_0/js/popup_call_1_1_0.js "></script>
+    <div class="popup_call_1_1_0">
+        <div class="popup_call_1_1_0__bo">
+            <div class="popup_call_1_1_0_overlay" id="popup_call_1_1_0_overlay" style="display:none"></div>
+            <div id="popup_call_1_1_0_overlayClickform" class="overlay_form" style="display:none">
+                <div class="popup_call_1_1_0_box">
                     <article>
-                        <div class="popup_call_1_0_0_header">
-                            <a id="popup_call_1_0_0_closePopup"></a>
+                        <div class="popup_call_1_1_0_header">
+                            <a id="popup_call_1_1_0_closePopup"></a>
                             <img src='images/logo-blue.png' />
-                            <div class="popup_call_1_0_0_headerpc">
-                                <div class="popup_call_1_0_0_header-note">Nhập số điện thoại để được BVTM Kangnam gọi lại ngay !</div>
+                            <div class="popup_call_1_1_0_headerpc">
+                                <div class="popup_call_1_1_0_header-note">Nhập số điện thoại để được BVTM Kangnam gọi lại ngay !</div>
                             </div>
-                            <div class="popup_call_1_0_0_headermb">
-                                <a href="tel:19006466" class="popup_call_1_0_0_headermb-call"><i class="popup_call_1_0_0_headermb-call-icon"></i> gọi ngay cho chúng tôi</a>
-                                <div class="popup_call_1_0_0_header-note">- hoặc để lại số điện thoại của bạn - <br> để nhận cuộc gọi từ <br> BVTM Kangnam</div>
+                            <div class="popup_call_1_1_0_headermb">
+                                <a href="tel:19006466" class="popup_call_1_1_0_headermb-call"><i class="popup_call_1_1_0_headermb-call-icon"></i> gọi ngay cho chúng tôi</a>
+                                <div class="popup_call_1_1_0_header-note">- hoặc để lại số điện thoại của bạn - <br> để nhận cuộc gọi từ <br> BVTM Kangnam</div>
                             </div>
                         </div>
-                        <div class="popup_call_1_0_0_content">
+                        <div class="popup_call_1_1_0_content">
                             <div>
                                 <div style="display:none">
                                     <input type="text" placeholder="Họ và tên (*)" value="Yêu Cầu Gọi Lại" id="iname" name="iname">
@@ -474,8 +474,8 @@
                                 <input onclick="ants_sent_phone(this);" id="pop_sent" type="button" value="yêu cầu gọi lại">
                             </div>
                         </div>
-                        <div class="popup_call_1_0_0_headerpc">
-                            <div class="popup_call_1_0_0_header-note">* Hoặc gọi ngay với chúng tôi hotline: <br> 1900.6466</div>
+                        <div class="popup_call_1_1_0_headerpc">
+                            <div class="popup_call_1_1_0_header-note">* Hoặc gọi ngay với chúng tôi hotline: <br> 1900.6466</div>
                         </div>
                     </article>
                 </div>
@@ -483,8 +483,8 @@
         </div>
     </div>
 
-    <link rel="stylesheet " type="text/css " href="Tool/popup_regist_1_0_8/css/popup_regist_1_0_8.css " />
-    <script src="Tool/popup_regist_1_0_8/js/popup_regist_1_0_8.js "></script>
+    <link rel="stylesheet " type="text/css " href="Popup/popup_regist_1_0_8/css/popup_regist_1_0_8.css " />
+    <script src="Popup/popup_regist_1_0_8/js/popup_regist_1_0_8.js "></script>
     <div class="popup_regist_1_0_8">
         <div class="popup_regist_1_0_8_block">
             <div class="popup_regist_1_0_8_overlay" id="popup_regist_1_0_8_overlay" style="display:none"></div>
@@ -557,9 +557,9 @@
         sourceTheme('Post/post_4_0_0/', '.post_4_0_0 source')
 
         imgTheme('Footer/footer_5_0_0/', '.footer_5_0_0 img')
-        imgTheme('Tool/tool_info_1_2_1/', '.tool_info_1_2_1 img')
-        imgTheme('Tool/popup_map_1_0_0/', '.popup_map_1_0_0 img')
-        imgTheme('Tool/popup_call_1_0_0/', '.popup_call_1_0_0 img')
+        imgTheme('Popup/tool_info_1_2_1/', '.tool_info_1_2_1 img')
+        imgTheme('Popup/popup_map_1_0_0/', '.popup_map_1_0_0 img')
+        imgTheme('Popup/popup_call_1_1_0/', '.popup_call_1_1_0 img')
     </script>
 </body>
 
