--- a/themes/home/index.html
+++ b/themes/home/index.html
@@ -538,18 +538,12 @@
                     <article>
                         <div class="popup_map_1_0_0__content">
                             <div class="popup_map_1_0_0__item">
-                                <div class="popup_map_1_0_0__tt">
-                                    <img src="images/tt_hcm.png" alt="">
-                                </div>
-                                <div class="popup_map_1_0_0__ct">
-                                    <div class="popup_map_1_0_0__pic">
-                                        <img src="images/KN-hcm.jpg" alt="">
-                                    </div>
-                                    <a href="https://www.google.com/maps/place/B%E1%BB%87nh+Vi%E1%BB%87n+Th%E1%BA%A9m+M%E1%BB%B9+Kangnam+H%C3%A0n+Qu%E1%BB%91c/@10.7817488,106.6797661,17z/data=!3m1!4b1!4m5!3m4!1s0x31752edf6f710189:0xb553f42d991d07dd!8m2!3d10.7817488!4d106.6819548?hl=vi"
-                                        target="_blank">
-                                        <img src="images/hcm.png" alt="">
-                                    </a>
-                                </div>
+
+                                <a href="https://www.google.com/maps/place/P,+666+C%C3%A1ch+M%E1%BA%A1ng+Th%C3%A1ng+T%C3%A1m,+ph%C6%B0%E1%BB%9Dng+11,+T%C3%A2n+B%C3%ACnh,+Th%C3%A0nh+ph%E1%BB%91+H%E1%BB%93+Ch%C3%AD+Minh+700000,+Vi%E1%BB%87t+Nam/@10.786674,106.6649636,17z/data=!4m5!3m4!1s0x31752ed20d82117b:0x92449d2cad0c9deb!8m2!3d10.7868163!4d106.6652104?hl=vi-VN"
+                                    target="_blank">
+                                    <img src="images/kangnam-hochiminh.jpg?ver=1" alt="">
+                                </a>
+
                             </div>
                         </div>
                         <a id="popup_map_1_0_0__close"></a>
