--- a/themes/home/gioi-thieu.html
+++ b/themes/home/gioi-thieu.html
@@ -266,7 +266,7 @@
                         <div class="post_4_0_0_hr__title">Ban giám đốc</div>
                         <ul class="post_4_0_0_hr__box1">
                             <li>Giám đốc chuyên môn</li>
-                            <li style="border:none">Giám đốc vận hành</li>
+                            <li style="border:none">Giám đốc điều hành</li>
                         </ul>
                         <ul class="post_4_0_0_hr__box2">
                             <li>BS.CKI Lê Văn Quý</li>
