--- a/themes/home/index.html
+++ b/themes/home/index.html
@@ -530,7 +530,7 @@
 
     <link rel="stylesheet " type="text/css " href="Popup/popup_map_1_0_0/css/popup_map_1_0_0.css " />
     <script src="Popup/popup_map_1_0_0/js/popup_map_1_0_0.js "></script>
-    <div class="popup_map_1_0_0" style="">
+    <div class="popup_map_1_0_0">
         <div class="container">
             <div class="popup_map_1_0_0__bg" id="popup_map_1_0_0_overlay" style="display:none"></div>
             <div class="popup_map_1_0_0__form" id="popup_map_1_0_0_overlayClickform" style="display:none">
